# evillimiter-ng

./: .flake8  .gitignore  CONTRIBUTING.md  CREDITS.md  LEGAL.md  LICENSE  README.md  pyproject.toml  software.toml
.github/workflows/: linter.yml  update_pkgbuild.yml
docs/: index.html  styles.css
evillimiter/: evillimiter.py
evillimiter/console/: shell.py
evillimiter/menus/: main_menu.py
evillimiter/networking/: limit.py  utils.py
evillimiter_ng/: __init__.py  evillimiter_ng.py
evillimiter_ng/common/: globals.py
evillimiter_ng/console/: banner.py  chart.py  io.py  shell.py
evillimiter_ng/menus/: main_menu.py  menu.py  parser.py
evillimiter_ng/networking/: host.py  limit.py  monitor.py  scan.py  spoof.py  utils.py  watch.py
pkgbuild/: PKGBUILD
