[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evillimiter-ng"
version = "2.0.0"
authors = [
  { name="KevinCrrl" },
]
description = "Monitors, analyzes and limits the bandwidth of devices on the local network (Next Generation)."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    'rich',
    'netaddr',
    'netifaces',
    'scapy>2.5.0',
]

classifiers = ['Environment :: Console',
               'Intended Audience :: End Users/Desktop',
               'Intended Audience :: System Administrators',
               'Intended Audience :: Developers',
               'Operating System :: Linux',
               'Programming Language :: Python :: 3.10',
               'Programming Language :: Python :: 3 :: Only',
               'Topic :: System :: Networking',
               ]

[project.urls]
"Homepage" = "https://github.com/KevinCrrl/evillimiter-ng"
"Bug Tracker" = "https://github.com/KevinCrrl/evillimiter-ng/issues"


[project.scripts]
evillimiter-ng = "evillimiter_ng.evillimiter_ng:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evillimiter_ng*"]
