[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evillimiter-ng"
version = "2.4.2"
authors = [
  { name="KevinCrrl" },
]
description = "Monitors, analyzes and limits the bandwidth of devices on the local network (Next Generation)."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
dependencies = [
    'rich',
    'netaddr',
    'netifaces2',
    'scapy>2.5.0',
    'prompt_toolkit>=3.0.0'
]

classifiers = ['Environment :: Console',
               'Intended Audience :: End Users/Desktop',
               'Intended Audience :: System Administrators',
               'Intended Audience :: Developers',
               'Operating System :: POSIX :: Linux',
               'Programming Language :: Python :: 3.10',
               'Programming Language :: Python :: 3 :: Only',
               'Topic :: System :: Networking',
               ]

[project.urls]
"Homepage" = "https://github.com/KevinCrrl/evillimiter-ng"
"Bug Tracker" = "https://github.com/KevinCrrl/evillimiter-ng/issues"


[project.scripts]
evillimiter-ng = "evillimiter_ng.evillimiter_ng:main"

[tool.hatch.build.targets.sdist]
packages = ["evillimiter_ng"]

[tool.hatch.build.targets.sdist.force-include]
"CREDITS.md" = "CREDITS.md"
"CODE_OF_CONDUCT.md" = "CODE_OF_CONDUCT.md"
"CONTRIBUTING.md" = "CONTRIBUTING.md"
"LEGAL.md" = "LEGAL.md"
"evillimiter_ng_screenshot.png" = "evillimiter_ng_screenshot.png"

[tool.hatch.build.targets.wheel]
packages = ["evillimiter_ng"]
